--- a/people.html
+++ b/people.html
@@ -33,8 +33,8 @@
 			<ul>
 				<li class="ease-all"><a href="http://katiesitu.ca/">music</a></li>
 				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
-				<li class="ease-all"><a href="people.html">people</a></li>
-				<li class="ease-all"><a href="places.html">places</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/people">people</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/places">places</a></li>
 				<li class="ease-all"><a href="bio.html">bio</a></li>
 				<li class="ease-all"><a href="design.html">design</a></li>
 				<!--<li class="ease-all"><a href="#contact">contact</a></li>-->
