--- a/yusso.html
+++ b/yusso.html
@@ -30,12 +30,12 @@
 		</div>
 		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
-				<li class="ease-all"><a href="index.html">music</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/">music</a></li>
 				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
-				<li class="ease-all"><a href="people.html">people</a></li>
-				<li class="ease-all"><a href="places.html">places</a></li>
-				<li class="ease-all"><a href="bio.html">bio</a></li>
-				<li class="ease-all"><a href="design.html">design</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/people">people</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/places">places</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/bio">bio</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/design">design</a></li>
 				<!--<li class="ease-all"><a href="#contact">contact</a></li>-->
 			</ul>	
 		</nav>
