--- a/eddiequotez.html
+++ b/eddiequotez.html
@@ -23,7 +23,7 @@
 <body>
 	<section class="top">
 		<div class="nav-logo">
-			<a class="small-logo" href="http://katiesitu.ca/><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
+			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
 			</ul>
