--- a/404.html
+++ b/404.html
@@ -2,19 +2,60 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>404 Page</title>
-	<meta name="handheldfriendly" content="true">
-	<meta name="mobileoptimized" content="240">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<title>katiesitu ·  404</title>
 	<link href="css/main.css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
+	<meta name="handheldfriendly" content="true">
+		<meta name="mobileoptimized" content="240">
+		<meta name="description" content="Katie Situ &middot; Photographer and Graphic Designer from Ottawa, Ontario, Canada.">
+		<meta name="keywords" content="photographer, graphic designer, art, ottawa, canada">
+		<meta name="author" content="Katie Situ">
+		<meta name="dcterms.rightsHolder" content="Katie Situ">
+		<meta name="ICBM" content="45.4214, -75.6919">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<link rel="author" href="humans.txt" />
+		<link rel="author" href="robots.txt" />
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,100italic,700italic' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Inconsolata:100,300,400,700,900,300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900" rel="stylesheet">
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Orbitron:400,500,700,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Exo:400,600,600i,800,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
+	<link rel="shortcut icon" href="img/logo-2017-black.png"/>
 </head>
 
 <body>
+	<section class="top">
+		<nav role="navigation">
+  			<div id="menuToggle">
+    		<input type="checkbox"/>
+			<span></span>
+    		<span></span>
+			<ul class="menu" id="menu">
+				<!--<li class="ease-all"><a href="http://katiesitu.ca/">MUSIC</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/design">ALBUMS</a></li>
+				-->
+				<li class="ease-all"><a href="http://katiesitu.ca/">PHOTO</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/design">DESIGN</a></li>
+				<!--<li class="ease-all"><a href="http://katiesitu.ca/people">PEOPLE</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/places">PLACES</a>--></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/bio">BIO</a></li>
+			</ul>
+			</div>
+		</nav>
+		<div class="nav-logo">
+			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
+		</div>
+	</section>
+
+<body>
 	<div class="error">
-		<h1>404</h1>
-		<h3><i>We couldn't find the page you were looking for.</i></h3>
-		<h3><i>Click <a href="index.html" style="text-decoration: none">here</a> to return to katiesitu.ca</i></h3>
+	<img src="img/lookeyes.gif">
+		<h2>OOPS</h2>
+		<h3>We can't seem to find the page you're looking for.</h3>
+
 	</div>
 	
 	<script src="js/nav.js"></script>
