--- a/eddiequotez.html
+++ b/eddiequotez.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>katiesitu · eddiequotez</title>
+	<title>katiesitu ·  eddiequotez</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -16,29 +16,37 @@
 		<link rel="author" href="humans.txt" />
 		<link rel="author" href="robots.txt" />
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,100italic,700italic' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Inconsolata:100,300,400,700,900,300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900" rel="stylesheet">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
-	<link rel="shortcut icon" href="img/logo.png"/>
+	<link href="https://fonts.googleapis.com/css?family=Orbitron:400,500,700,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Exo:400,600,600i,800,900" rel="stylesheet">
+	<link rel="shortcut icon" href="img/logo-2017-black.png"/>
 </head>
 
 <body>
 	<section class="top">
+		<nav role="navigation">
+  			<div id="menuToggle">
+    		<input type="checkbox"/>
+			<span></span>
+    		<span></span>
+			<ul class="menu" id="menu">
+				<!--<li class="ease-all"><a href="http://katiesitu.ca/">MUSIC</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/design">ALBUMS</a></li>
+				-->
+				<li class="ease-all"><a href="http://katiesitu.ca/"><strong>HOME</strong></a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/design">DESIGN</a></li>
+				<!--<li class="ease-all"><a href="http://katiesitu.ca/people">PEOPLE</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/places">PLACES</a>--></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/bio">BIO</a></li>
+			</ul>
+			</div>
+		</nav>
 		<div class="nav-logo">
 			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
-			<ul>
-				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
-			</ul>
 		</div>
-		<nav class="nav nav-top slideDown" data-state="collasped">
-			<ul>
-				<li class="ease-all"><a href="http://katiesitu.ca/">music</a></li>
-				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
-				<li class="ease-all"><a href="http://katiesitu.ca/people">people</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/places">places</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/bio">bio</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/design">design</a></li>
-				<!--<li class="ease-all"><a href="#contact">contact</a></li>-->
-			</ul>	
-		</nav>
 	</section>
 	
 	<section id="home" class="home">
@@ -149,73 +157,18 @@
 			</ul>
 		</div>
 	</section>
-	<!--<section id="graphicdesign">
-		<div class="graphicdesign">
-			<img id="myImg" src="img/morris-2.png" alt="Trolltunga, Norway">
-	-->
-<!-- The Modal -->
-<div id="myModal" class="modal">
-  <span class="close">×</span>
-  <img class="modal-content" id="img01">
-  <div id="caption"></div>
-</div>
-
-<script>
-// Get the modal
-var modal = document.getElementById('myModal');
-
-// Get the image and insert it inside the modal - use its "alt" text as a caption
-var img = document.getElementById('myImg');
-var modalImg = document.getElementById("img01");
-var captionText = document.getElementById("caption");
-img.onclick = function(){
-    modal.style.display = "block";
-    modalImg.src = this.src;
-    modalImg.alt = this.alt;
-    captionText.innerHTML = this.alt;
-}
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-}
-</script>
-		</div>
-	</section>
-	<!--<section id="about" class="about grid">
-	<div class="intro unit unit-s-1">
-		<h1>hello,</h1>
-		<p><em>katie "kae" situ</em> · ( mainly music ) photographer / graphic designer</p>
-		<p>residing in ottawa, canada · available worldwide for touring photographer!</p>
-		<p>please check out my graphic design work · it's not much right now, but I got a few projects up!</p>
-		
-		<p>music · travel · art</p>
-		<h1>KATIE SITU</h1>
-		<p>(b. 1993, ottawa, canada)</p>
-		<h1>education:</h1>
-		<p>OCAD in Graphic Design from Algonquin College, School of Media & Design</p>
-		<img src="img/profilephoto.png" alt="katie-situ">
-	</div>
-	</section>-->
 	
 	<footer id="contact" class="contact">
 		<div>
-			<h1>LET'S WORK TOGETHER</h1>
-			<h4>Get in touch to collaborate on new projects.</h4>
-			<h5><strong>katie.situ@gmail.com</strong></h5>
 			<ul class="social">
-				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
+				<!--<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>-->
 				<li><a href="https://twitter.com/kvesitu"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
-				<li><a href="https://www.behance.net/katiesitu"><i class="fa fa-behance"></i><span class="hide-text">Behance</span></a></li>
+				<!--<li><a href="https://www.behance.net/katiesitu"><i class="fa fa-behance"></i><span class="hide-text">Behance</span></a></li>-->
 				<li><a href="https://www.vimeo.com/katiesitu"><i class="fa fa-vimeo-square"></i><span class="hide-text">Vimeo</span></a></li>
 				<li><a href="https://www.instagram.com/kaesphvto"><i class="fa fa-instagram"></i><span class="hide-text">Instagram</span></a></li>
 			</ul>
-			<!--<a class="slideDown ease-all top-btn" href="#home"><img src="img/top.svg" alt="Top Button"></a>-->
 		</div>
-			<p>©2017 Katie Situ</p> 
+			<p><strong>©2018 KATIE SITU</strong></p> 
 	</footer>
 	
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
