--- a/design.html
+++ b/design.html
@@ -52,6 +52,9 @@
 			<div class="unit unit-s-1">
   			<ul class="photos">
 				<li>
+					<img src="img/img-graphicdesign-12.png" alt="eben">
+				</li>
+				<li>
 					<img src="img/img-graphicdesign-3.png" alt="eben">
 				</li>
 				<li>
@@ -61,10 +64,10 @@
 					<img src="img/img-graphicdesign-10.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-graphicdesign-1.png" alt="eben">
+					<img src="img/img-graphicdesign-6.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-graphicdesign-6.png" alt="eben">
+					<img src="img/img-graphicdesign-1.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/img-graphicdesign-8.png" alt="eben">
