made edits to every page
photos, nav, etc

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>katiesitu ·  404</title>
+	<title>404 · katiesitu</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -33,30 +33,35 @@
     		<input type="checkbox"/>
 			<span></span>
     		<span></span>
-			<ul class="menu" id="menu">
-				<!--<li class="ease-all"><a href="http://katiesitu.ca/">MUSIC</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/design">ALBUMS</a></li>
-				-->
-				<li class="ease-all"><a href="http://katiesitu.ca/">PHOTO</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/design">DESIGN</a></li>
-				<!--<li class="ease-all"><a href="http://katiesitu.ca/people">PEOPLE</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/places">PLACES</a>--></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/bio">BIO</a></li>
+			<ul class="nav" id="nav">
+				<li class="ease-all"><a href="http://katiesitu.ca/">01 photo</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/design">02 design</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/bio">03 bio</a></li>
 			</ul>
 			</div>
 		</nav>
-		<div class="nav-logo">
-			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
+		<div class="logo">
+			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/kaelogo-01.svg" alt="Logo Navigation"></a>
 		</div>
 	</section>
 
 <body>
 	<div class="error">
-	<img src="img/lookeyes.gif">
-		<h2>OOPS</h2>
-		<h3>We can't seem to find the page you're looking for.</h3>
+	<img src="img/404.svg">
+		<h2>We can't seem to find the page you're looking for.&nbsp;<i class="fa fa-frown-o" aria-hidden="true"></i></h2>
 
 	</div>
+	
+	<footer id="footer-social" class="footer-social">
+		<p>©2022 katie situ</p> 
+		<div>
+			<ul class="social">
+				<li><a href="https://twitter.com/kvesitu"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
+				<li><a href="https://www.vimeo.com/katiesitu"><i class="fa fa-vimeo-square"></i><span class="hide-text">Vimeo</span></a></li>
+				<li><a href="https://www.instagram.com/kaesphvto"><i class="fa fa-instagram"></i><span class="hide-text">Instagram</span></a></li>
+			</ul>
+		</div>
+	</footer>
 	
 	<script src="js/nav.js"></script>
 </body>
