--- a/places.html
+++ b/places.html
@@ -33,19 +33,14 @@
 			<span></span>
     		<span></span>
 			<ul class="menu" id="menu">
-				<!--<li class="ease-all"><a href="http://katiesitu.ca/">MUSIC</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/design">ALBUMS</a></li>
-				-->
-				<li class="ease-all"><a href="http://katiesitu.ca/">HOME</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/design">DESIGN</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/people">PEOPLE</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/places"><strong>PLACES</strong></a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/bio">BIO</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/">01 photo</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/design">02 design</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/bio">03 bio</a></li>
 			</ul>
 			</div>
 		</nav>
 		<div class="nav-logo">
-			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
+			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/kaelogo-01.svg" alt="Logo Navigation"></a>
 		</div>
 	</section>
 	
@@ -86,6 +81,7 @@
 		</div>
 	</section>
 	<footer id="contact" class="contact">
+		<p>©2022 katie situ</p> 
 		<div>
 			<ul class="social">
 				<!--<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>-->
@@ -95,7 +91,6 @@
 				<li><a href="https://www.instagram.com/kaesphvto"><i class="fa fa-instagram"></i><span class="hide-text">Instagram</span></a></li>
 			</ul>
 		</div>
-			<p><strong>©2018 KATIE SITU</strong></p> 
 	</footer>
 	
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
