--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>katiesitu ·  photo</title>
+	<title>photo · katiesitu</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -32,26 +32,22 @@
     		<input type="checkbox"/>
 			<span></span>
     		<span></span>
-			<ul class="menu" id="menu">
-				<li class="ease-all"><a href="http://katiesitu.ca/"><strong>PHOTO</strong></a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/design">DESIGN</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/bio">BIO</a></li>
+			<ul class="nav" id="nav">
+				<li class="ease-all"><a href="http://katiesitu.ca/"><strong>01 photo</strong></a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/design">02 design</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/bio">03 bio</a></li>
 			</ul>
 			</div>
 		</nav>
-		<div class="nav-logo">
-			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
+		<div class="logo">
+			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/kaelogo-01.svg" alt="Logo Navigation"></a>
 		</div>
-	</section>
-	
-	<section id="home" class="home">
-		<!--<img class="main-logo" src="img/logo2.svg" alt="Logo">-->
 	</section>
 	<section id="portfolio" class="portfolio grid">
 			<div class="unit unit-s-1">
-  			<ul class="photos">
+  			<ul class="work">
 				<li>
-					<img src="img/eddieq2017-17.png" alt="eben">
+					<img src="img/weday-francesco-yates-4.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/yussobluesfest-6.png" alt="eben">
@@ -66,9 +62,6 @@
 					<img src="img/eddieq2017-6-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/weday-francesco-yates-4.png" alt="eben">
-				</li>
-				<li>
 					<img src="img/yussobluesfest-24.png" alt="eben">
 				</li>
 				<li>
@@ -81,10 +74,10 @@
 					<img src="img/yussobluesfest-32.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/weday-francesco-yates-2.png" alt="inshar">
+					<img src="img/yussobluesfest-35.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/yussobluesfest-35.png" alt="eben">
+					<img src="img/weday-francesco-yates-2.png" alt="inshar">
 				</li>
 				<li>
 					<img src="img/yussobluesfest-20.png" alt="eben">
@@ -111,36 +104,18 @@
 		</div>
 	</section>
 
-	<footer id="contact" class="contact">
+		<footer id="footer-social" class="footer-social">
+		<p>©2022 katie situ</p> 
 		<div>
 			<ul class="social">
-				<!--<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>-->
 				<li><a href="https://twitter.com/kvesitu"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
-				<!--<li><a href="https://www.behance.net/katiesitu"><i class="fa fa-behance"></i><span class="hide-text">Behance</span></a></li>-->
 				<li><a href="https://www.vimeo.com/katiesitu"><i class="fa fa-vimeo-square"></i><span class="hide-text">Vimeo</span></a></li>
 				<li><a href="https://www.instagram.com/kaesphvto"><i class="fa fa-instagram"></i><span class="hide-text">Instagram</span></a></li>
 			</ul>
 		</div>
-			<p><strong>©2018 KATIE SITU</strong></p> 
 	</footer>
 	
-	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="js/jquery.scrollTo.min.js"></script>
-	<script src="js/jquery.localScroll.min.js"></script>
-	<script src="js/waypoints.min.js"></script>
-	<script src="js/main.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script type="text/javascript">
-		$(window).load(function() {
-			$('.flexslider').flexslider({
-			animation: "slide",
-			smoothHeight: "true",
-			touch: "true",
-			keyboard: "true",
-			});
-		});
-	</script>
 	<script src="js/nav.js"></script>
-
+	
 </body>
 </html>
