--- a/people.html
+++ b/people.html
@@ -27,25 +27,21 @@
 
 <body>
 	<section class="top">
+<section class="top">
 		<nav role="navigation">
   			<div id="menuToggle">
     		<input type="checkbox"/>
 			<span></span>
     		<span></span>
 			<ul class="menu" id="menu">
-				<!--<li class="ease-all"><a href="http://katiesitu.ca/">MUSIC</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/design">ALBUMS</a></li>
-				-->
-				<li class="ease-all"><a href="http://katiesitu.ca/">MUSIC</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/peopleplaces"><strong>PEOPLE/PLACES</strong></a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/design">DESIGN</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/bio">BIO</a></li>
-
+				<li class="ease-all"><a href="http://katiesitu.ca/">01 photo</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/design"><strong>02 design</strong></a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/bio">bio</a></li>
 			</ul>
 			</div>
 		</nav>
 		<div class="nav-logo">
-			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
+			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/kaelogo-01.svg" alt="Logo Navigation"></a>
 		</div>
 	</section>
 	
@@ -94,13 +90,11 @@
 				<li>
 					<img src="img/img-inshar-111.png" alt="eben">
 				</li>
-				<li>
-					<img src="img/frankie-3.png" alt="eben">
-				</li>
 			</ul>
 		</div>
 	</section>
 	<footer id="contact" class="contact">
+		<p>©2022 katie situ</p> 
 		<div>
 			<ul class="social">
 				<!--<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>-->
@@ -110,7 +104,6 @@
 				<li><a href="https://www.instagram.com/kaesphvto"><i class="fa fa-instagram"></i><span class="hide-text">Instagram</span></a></li>
 			</ul>
 		</div>
-			<p><strong>©2018 KATIE SITU</strong></p> 
 	</footer>
 	
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
