--- a/index.html
+++ b/index.html
@@ -114,7 +114,22 @@
 			</ul>
 		</div>
 	</footer>
-	
+		<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="js/jquery.scrollTo.min.js"></script>
+	<script src="js/jquery.localScroll.min.js"></script>
+	<script src="js/waypoints.min.js"></script>
+	<script src="js/main.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<script type="text/javascript">
+		$(window).load(function() {
+			$('.flexslider').flexslider({
+			animation: "slide",
+			smoothHeight: "true",
+			touch: "true",
+			keyboard: "true",
+			});
+		});
+	</script>
 	<script src="js/nav.js"></script>
 	
 </body>
