--- a/home.html
+++ b/home.html
@@ -43,22 +43,65 @@
 			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/kaelogo-01.svg" alt="Logo Navigation"></a>
 		</div>
 	</section>
-	
-	<section id="home" class="home grid">
-	<div>
-		<h1><strong>katie situ</strong> <italic>&#40;kae&#41;</italic></h1>
-		<p class="location">(ottawa, canada)</p>
-		<h1>education:</h1>
-		<p>ocad in graphic design,
-		<p><i>algonquin college, school of media & design, 2015</i></p>
-		<h1>experience:</h1>
-		<p>stage photographer, we day<br>rtist photographer, rbc bluesfest 2015 - 2017<br>freelance photographer: portrait, shows<br>freelance graphic designer: covers, posters, illustration, calligraphy</p>
-		<h1>software:</h1>
-		<p>adobe lightroom, photoshop, illustrator, indesign, premiere pro, after effects</p>
-		<h1>interests:</h1>
-		<p>music, concerts, travel, matcha, dystopian shows, fashion</p>
-		
-	</div>
+	<section id="portfolio" class="portfolio grid">
+			<div class="unit unit-s-1">
+  			<ul class="work">
+				<li>
+					<img src="img/weday-francesco-yates-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-6.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eddie-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggydancers.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-6-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-24.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-jrdn-1-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-shawn-hook-3.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-32.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-35.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-francesco-yates-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-20.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-15.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-37.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-9.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-shawn-hook-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/eddieq2017-22.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-19.png" alt="eben">
+				</li>
+			</ul>
+		</div>
 	</section>
 		<footer id="footer-social" class="footer-social">
 		<p>©2022 katie situ</p> 
