updated social links

--- a/home.html
+++ b/home.html
@@ -103,12 +103,12 @@
 			</ul>
 		</div>
 	</section>
-		<footer id="footer-social" class="footer-social">
-			<div>
+	<footer id="footer-social" class="footer-social">
+		<div>
 			<ul class="social">
 				<!--<li><a href="https://twitter.com/kvesitu"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>-->
-				<li><a href="https://www.vimeo.com/katiesitu"><i class="fa fa-vimeo-square"></i><span class="hide-text">Vimeo</span></a></li>
-				<li><a href="https://www.instagram.com/kaesphvto"><i class="fa fa-instagram"></i><span class="hide-text">Instagram</span></a></li>
+				<li><a href="https://www.vimeo.com/katiesitu"><img src="img/vimeo.svg" class="fa"><span class="hide-text">Vimeo</span></a></li>
+				<li><a href="https://www.instagram.com/kaesphvto"><img src="img/instagram.svg" class="fa"><span class="hide-text">Instagram</span></a></li>
 			</ul>
 		</div>
 		<p>©2022 katie situ</p> 
