adjusted copyright and nav span
sizing for span and spacing for copyright

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Exo:400,600,600i,800,900" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,500,700;1,400;1,700&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="img/logo-2017-black.png"/>
 </head>
 
@@ -89,7 +89,7 @@
 		</div>
 	</section>
 	<footer id="footer-social" class="footer-social">
-		<p><strong>©</strong>&hairsp;'15&ensp;-&hairsp;'26&ensp;KS</p> 
+		<p><strong style="font-size: 1rem;">©</strong>&hairsp;'15&ensp;-&hairsp;'26&ensp;KS</p> 
 		<div>
 			<ul class="social">
 				<li><a href="https://www.instagram.com/kaesphvto"><img src="img/instagram.svg"></i><span class="hide-text">Instagram</span></a></li>
