added background colour
404 page

--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
 	<link rel="shortcut icon" href="img/logo-2017-black.png"/>
 </head>
 
-<body>
+<body style=background-color:"#EDEDE9">
 	<section class="top">
 		<nav role="navigation">
   			<div id="menuToggle">
