updated social links
updated ig link

--- a/design.html
+++ b/design.html
@@ -80,10 +80,10 @@
 		</div>
 	</section>
 	<footer id="footer-social" class="footer-social grid unit unit-s-1">
-		<p><strong>©</strong>&hairsp;'15&ensp;-&hairsp;'26&ensp;KS</p> 
+		<p><strong style="font-size: 1rem;">©</strong>&hairsp;'15&ensp;-&hairsp;'26&ensp;KS</p>  
 		<div>
 			<ul class="social">
-				<li><a href="https://www.instagram.com/kaesphvto"><img src="img/instagram.svg"></i><span class="hide-text">Instagram</span></a></li>
+				<li><a href="https://www.instagram.com/kaesvisuals"><img src="img/instagram.svg"></i><span class="hide-text">Instagram</span></a></li>
 				<li><a href="https://www.vimeo.com/katiesitu"><img src="img/vimeo.svg"></i><span class="hide-text">Vimeo</span></a></li>
 			</ul>
 		</div>
