--- a/design.html
+++ b/design.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>02 design · katiesitu</title>
+	<title>design · katiesitu</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
